--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Docker Build and Push
 
 on:
   push:
@@ -6,22 +6,18 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.karlisrb }}
-          password: ${{ secrets.dckr_pat_PHM9d8Y_3NxwbKkHGzxrwVvzXVE }}
+    - name: Login to Docker Hub
+      run: docker login -u ${{ secrets.karlisrb }} -p ${{ secrets.dckr_pat_PHM9d8Y_3NxwbKkHGzxrwVvzXVE }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.karlisrb }}/api-tests:latest
+    - name: Build Docker Image
+      run: docker build -t ${{ secrets.karlisrb }}/api-tests:latest .
+
+    - name: Push Docker Image
+      run: docker push ${{ secrets.karlisrb }}/api-tests:latest
