--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,13 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
 
-    - name: Login to Docker Hub
-      run: docker login -u ${{ secrets.karlisrb }} -p ${{ secrets.dckr_pat_PHM9d8Y_3NxwbKkHGzxrwVvzXVE }}
+    - name: Docker Login
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.karlisrb }}
+        password: ${{ secrets.dckr_pat_PHM9d8Y_3NxwbKkHGzxrwVvzXVE }}
 
     - name: Build Docker Image
       run: docker build -t ${{ secrets.karlisrb }}/api-tests:latest .
