--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
     - name: Docker Login
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.karlisrb }}
-        password: ${{ secrets.dckr_pat_PHM9d8Y_3NxwbKkHGzxrwVvzXVE }}
+      run: echo "${{ secrets.karlisrb }}" | docker login -u ${{ secrets.karlisrb }} --password-stdin
 
     - name: Build Docker Image
-      run: docker build -t ${{ secrets.karlisrb }}/api-tests:latest .
+      run: docker buildx build -t ${{ secrets.karlisrb }}/api-tests:latest .
 
     - name: Push Docker Image
       run: docker push ${{ secrets.karlisrb }}/api-tests:latest
