--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Docker Login
-      run: echo "${{ secrets.karlisrb }}" | docker login -u ${{ secrets.karlisrb }} --password-stdin
+    - name: Login to Docker Hub
+      run: docker login -u ${{ secrets.karlisrb }} -p ${{ secrets.dckr_pat_PHM9d8Y_3NxwbKkHGzxrwVvzXVE }}
 
     - name: Build Docker Image
       run: docker buildx build -t ${{ secrets.karlisrb }}/api-tests:latest .
