--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Login to Docker Hub
-      run: docker login -u ${{ secrets.karlisrb }} -p ${{ secrets.dckr_pat_PHM9d8Y_3NxwbKkHGzxrwVvzXVE }}
+      run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build Docker Image
-      run: docker buildx build -t ${{ secrets.karlisrb }}/api-tests:latest .
+      run: docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/api-tests:latest .
 
     - name: Push Docker Image
-      run: docker push ${{ secrets.karlisrb }}/api-tests:latest
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/api-tests:latest
