--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,4 @@ jobs:
       run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build Docker Image
-      run: docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/api-tests:latest .
-
-    - name: Push Docker Image
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/api-tests:latest
+      run: docker buildx build --push -t ${{ secrets.DOCKERHUB_USERNAME }}/api-tests:latest .
